add table compoenent + fixes

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,17 +14,17 @@
 </head>
 
 <body>
-<app>Loading...</app>
+    <app>Loading...</app>
 
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a class="reload"
-       href="">
-        Reload
-    </a>
-    <a class="dismiss">🗙</a>
-</div>
-<script src="_framework/blazor.webassembly.js"></script>
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a class="reload"
+           href="">
+            Reload
+        </a>
+        <a class="dismiss">🗙</a>
+    </div>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
